added br-nativo layout

--- a/app/src/main/res/xml-sw600dp/key_comma.xml
+++ b/app/src/main/res/xml-sw600dp/key_comma.xml
@@ -38,7 +38,15 @@
         </case>
         <case
             latin:keyboardLayoutSet="dvorak"
-        >
+            >
+            <Key
+                latin:keySpec="!"
+                latin:moreKeys="!text/morekeys_exclamation,%"
+                latin:keyStyle="settingsMoreKeysStyle" />
+        </case>
+        <case
+            latin:keyboardLayoutSet="br_nativo"
+            >
             <Key
                 latin:keySpec="!"
                 latin:moreKeys="!text/morekeys_exclamation,%"
