--- a/app/src/main/res/xml/method.xml
+++ b/app/src/main/res/xml/method.xml
@@ -88,6 +88,7 @@
     nl_BE: Dutch (Belgium)/azerty
     pl: Polish/qwerty
     pt_BR: Portuguese (Brazil)/qwerty
+    pt_BRNT: Portuguese (Brazil)/br_nativo
     pt_PT: Portuguese (Portugal)/qwerty
     ro: Romanian/qwerty
     ru: Russian/east_slavic
@@ -667,6 +668,15 @@
             android:imeSubtypeExtraValue="KeyboardLayoutSet=qwerty,AsciiCapable,EmojiCapable"
             android:isAsciiCapable="true"
     />
+    <subtype android:icon="@drawable/ic_ime_switcher_dark"
+        android:label="@string/subtype_with_layout_pt_BRNT"
+        android:subtypeId="0xcafff4aa"
+        android:imeSubtypeLocale="pt_BRNT"
+        android:languageTag="pt-BR"
+        android:imeSubtypeMode="keyboard"
+        android:imeSubtypeExtraValue="KeyboardLayoutSet=br_nativo,AsciiCapable,EmojiCapable"
+        android:isAsciiCapable="true"
+        />
     <subtype android:icon="@drawable/ic_ime_switcher_dark"
             android:label="@string/subtype_generic"
             android:subtypeId="0xe2fffc5a"
